@@ -10,6 +10,7 @@
 - Feature: [objects#229] Port RCT1 go karts with helmets.
 - Improved: [#11473] Hot reload for plug-ins now works on macOS.
 - Improved: [#12466] RCT1 parks now use RCT1’s interest calculation algorithm.
+- Improved: [#14635] Scenery window now shows up to 255 scenery groups.
 - Improved: [#17288] Reorganise the order of shortcut keys in the Shortcut Keys window.
 - Improved: [#18706] Ability to view the list of contributors in-game.
 - Improved: [#18749] Ability to have 4 active awards for more than one month in a row.
@@ -22,7 +23,7 @@
 - Improved: [#19253] Queue junctions drawn properly when using regular paths as queue.
 - Improved: [#19067] New Ride window now allows filtering similarly to Object Selection.
 - Improved: [#19272] Scenery window now allows filtering similarly to Object Selection.
-- Improved: [#14635] Scenery window now shows up to 255 scenery groups.
+- Improved: [#00000] Added W and Y with circumflex to sprite font (for Welsh).
 - Change: [#19018] Renamed actions to fit the naming scheme.
 - Change: [#19091] [Plugin] Add game action information to callback arguments of custom actions.
 - Change: [#19233] Reduce lift speed minimum and maximum values for “Classic Wooden Coaster”.
